# DeadCityNights

./: .gitignore  AdventureGame.txt  AnimationPlayer.h  BackupMain.txt  Bullet.cpp  Bullet.h  CMakeLists.txt  Explosion.cpp  Explosion.h  GameCalendar.cpp  GameCalendar.h  GameEnums.h  GameResources.cpp  GameResources.h  Globals.cpp  Globals.h  Grenade.cpp  Grenade.h  Inventory.h  Makefile  NPC.cpp  NPC.h  Particle.cpp  Particle.h  Pickup.cpp  Pickup.h  Platform.cpp  Platform.h  Player.cpp  Player.h  README.md  SoundManager.h  box.cpp  box.h  main.code-workspace  main.cpp  mygame  resource.rc  shaderControl.cpp  shaderControl.h
.github/workflows/: c-cpp.yml
Credits/: credits.txt
assets/: AdventureGame.txt  Diagram.png~  NewRun.ase  NewWalk.ase  Runing.ase  elevator.ase  flip.ase  ghost.ase  office.ase  shootSheet.ase  tank.ase  walking.ase  walkingSheet.ase
include/: Bullet.h  Explosion.h  GameCalendar.h  GameEnums.h  GameResources.h  Globals.h  Grenade.h  NPC.h  Particle.h  Pickup.h  Platform.h  Player.h  SoundManager.h  box.h  shaderControl.h
shaders/: blur.fs  crt_effect.fs  glitch.fs  glitchVignetteShader.fs  glow.fs  glow2.fs  highlight.fs  oldFilm.fs  oldFilm.vs  outline.fs  outlineGlow.fs  pixelation.fs  rainbowOutline.fs  redVignette.fs  ripple.fs  shader(invert).fs  shader(invert).vs  shaderGlitch.fs  shaderGlitch.vs  sharpen.fs  vignette.fs  wave_distortion.fs
src/: Bullet.cpp  Explosion.cpp  GameCalendar.cpp  GameResources.cpp  Globals.cpp  Grenade.cpp  Platform.cpp  Player.cpp  box.cpp  main.cpp  shaderControl.cpp
